# OPSEC-Scanner

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
opsec_scanner/: scanner.py
