[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opsec-tor-scanner"
version = "1.0.0"
description = "A high-OPSEC, Tor-routed network reconnaissance and probing framework."
authors = [
    { name = "Gemini & raKSum" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "requests",
    "PySocks",
    "stem",
    "rich"
]

[project.scripts]
opsec-scan = "opsec_scanner.scanner:execute_bulletproof_scan"