[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opsec_scanner"
version = "1.3.0"
description = "🛡️ High-OPSEC Tor-Routed Network Probing and Reconnaissance Engine."
readme = "README.md"
authors = [
    { name = "Gemini & raKSum" }
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
]

# Exact pinned dependencies from your requirements.txt
dependencies = [
    "certifi==2026.6.17",
    "charset-normalizer==3.4.9",
    "idna==3.18",
    "markdown-it-py==4.2.0",
    "mdurl==0.1.2",
    "numpy==2.5.1",
    "Pygments==2.20.0",
    "PySocks==1.7.1",
    "requests==2.34.2",
    "rich==15.0.0",
    "stem==1.8.2",
    "urllib3==2.7.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/opsec_scanner"

# Automatically creates a global CLI shortcut 'opsec-scan' when installed
[project.scripts]
opsec-scan = "opsec_scanner.scanner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["opsec_scanner*"]